Removed DeviceDataManagerX11::scrollclass_devices_

This field isn't needed, and goes against the idea that a mouse either supports
scroll classes entirely or not at all. Instead we should use logic that checks
whether a device supports horizontal, vertical or both scroll classes. I also
fixed some logic that could have passed an invalid validator ID into
XIMaskIsSet---this new check covers the check removed above it.

BUG=596013

Review URL: https://codereview.chromium.org/1896483002

Cr-Commit-Position: refs/heads/master@{#388208}

Former-commit-id: b89e8ac7021fcee56c7cc34fd077eac253c99d0b